# adhd-helper

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-07-02-focus-mainline-anchor-ui.md
docs/superpowers/specs/: 2026-07-02-focus-mainline-anchor-ui-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  reminders.rs  tasks.rs  timer.rs
src/components/layout/: PopupShell.tsx  TabBar.tsx
src/components/reminders/: ReminderInput.tsx  ReminderList.tsx  ReminderPage.tsx
src/components/settings/: SettingsPanel.tsx
src/components/tasks/: TaskFocus.tsx  TaskFocusPage.tsx  TaskInput.tsx
src/components/timer/: CircularProgress.tsx  TimerControls.tsx  TimerView.tsx
src/hooks/: useReminders.ts  useTasks.ts  useTimer.ts
src/lib/: notifications.ts  store.ts  tauri-api.ts
src/styles/: global.css
src/types/: index.ts
